# Epic-Asset-Manager

./: .gitignore  .gitmodules  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PR_DESCRIPTION.md  README.md  build.rs  build.sh  install-local.sh  meson.build  meson_options.txt
.github/: FUNDING.yml
.github/workflows/: release.yml  rust-clippy.yml  rust.yml  sast.yml  secrets.yml
.github/workflows/configuration/: exclude_paths.txt
build-aux/: cargo.sh  io.github.achetagames.epic_asset_manager.Devel.json  io.github.achetagames.epic_asset_manager.json  meson_post_install.py  next-release.sh
data/: io.github.achetagames.epic_asset_manager.desktop.in.in  io.github.achetagames.epic_asset_manager.gschema.xml.in  io.github.achetagames.epic_asset_manager.metainfo.xml.in.in  meson.build  metainfo  resources.gresource.xml
data/applications/: io.github.achetagames.epic_asset_manager.desktop
data/icons/: meson.build
data/resources/: meson.build  resources.gresource  resources.gresource.xml  style.css
data/resources/ui/: asset.ui  asset_detail.ui  dir_row.ui  download_detail.ui  download_item.ui  download_manager.ui  engine.ui  engine_detail.ui  engines.ui  image_stack.ui  library.ui  logged_in.ui  preferences.ui  project.ui  project_detail.ui  projects.ui  sid.ui  sidebar_category.ui  window.ui
data/resources/ui/download_manager/: download_item.ui  download_manager.ui
data/resources/ui/logged_in/: log_line.ui  logged_in.ui  logs.ui  plugin.ui  plugins.ui
data/resources/ui/logged_in/engines/: docker_download.ui  engine.ui  engine_detail.ui  engines.ui  engines_side.ui  epic_download.ui  install.ui
data/resources/ui/logged_in/fab/: fab.ui  fab_asset.ui  fab_asset_detail.ui  fab_library.ui  fab_version_dialog.ui
data/resources/ui/logged_in/fab/actions/: fab_add_to_project.ui  fab_asset_actions.ui  fab_create_asset_project.ui  fab_download_detail.ui  fab_local_asset.ui  fab_manage_local_assets.ui
data/resources/ui/logged_in/fab/sidebar/: fab_sidebar.ui  fab_sidebar_button.ui  fab_sidebar_categories.ui  fab_sidebar_category.ui
data/resources/ui/logged_in/games/: games.ui
data/resources/ui/logged_in/projects/: project.ui  project_detail.ui  projects.ui
data/resources/ui/preferences/: dir_row.ui  preferences.ui
data/resources/ui/sid_login/: sid.ui
docs/: api-map.md
migrations/2021-10-03-221905-last-project-engine/: down.sql  up.sql
migrations/2021-10-03-234538-favourite-asset/: down.sql  up.sql
migrations/2021-12-12-232715-user-data/: down.sql  up.sql
pkgs/: com.github.achetagames.eam.desktop
po/: POTFILES.in
src/: api_data.rs  application.rs  config.rs  config.rs.in  gui.glade  main.rs  meson.build  schema.rs  window.rs
src/application/: imp.rs
src/configuration/: mod.rs
src/download/: chunks.rs  images.rs  mod.rs
src/models/: AGENTS.md  asset_data.rs  asset_model.rs  category_data.rs  database.rs  engine_data.rs  fab_data.rs  fab_search_data.rs  log_data.rs  mod.rs  object_wrapper.rs  plugin_data.rs  project_data.rs  row_data.rs
src/tools/: asset_info.rs  auth.rs  cache.rs  category_filter.rs  epic_web.rs  image_stock.rs  mod.rs  or.rs
src/ui/: assets.rs  authentication.rs  configuration.rs  download_manifest.rs  epic_assets.rs  images.rs  messages.rs  mod.rs  update.rs
src/ui/widgets/: button_cust.rs  mod.rs  progress_icon.rs
src/ui/widgets/download_manager/: AGENTS.md  asset.rs  docker.rs  download_item.rs  epic_file.rs  mod.rs
src/ui/widgets/logged_in/: AGENTS.md  asset.rs  asset_detail.rs  category.rs  download_detail.rs  engine.rs  engines.rs  image_stack.rs  library.rs  log_line.rs  logs.rs  mod.rs  plugins.rs  project.rs  project_detail.rs  projects.rs  refresh.rs
src/ui/widgets/logged_in/engines/: docker_download.rs  engine.rs  engine_detail.rs  engines_side.rs  epic_download.rs  install.rs  mod.rs
src/ui/widgets/logged_in/fab/: asset.rs  asset_detail.rs  mod.rs  version_dialog.rs
src/ui/widgets/logged_in/fab/actions/: add_to_project.rs  create_asset_project.rs  download_detail.rs  local_asset.rs  manage_local_assets.rs  mod.rs
src/ui/widgets/logged_in/fab/sidebar/: button.rs  categories.rs  category.rs  mod.rs
src/ui/widgets/logged_in/games/: mod.rs
src/ui/widgets/logged_in/projects/: mod.rs  project.rs  project_detail.rs
src/ui/widgets/preferences/: dir_row.rs  mod.rs  window.rs
src/ui/widgets/sid_login/: mod.rs
src/window/: imp.rs
