[package]
name = "epic_asset_manager"
version = "3.8.1"
authors = ["Milan Stastny <milan@stastnej.ch>"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/AchetaGames/Epic-Asset-Manager"
description = "An unofficial client to install Unreal Engine, download and manage purchased assets, projects, plugins and games from the Epic Games Store"
keywords = ["unreal", "engine", "gamedev", "assets", "epic"]
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { package = "libadwaita", version = "0.2" }
anyhow = "1.0"
byte-unit = "4.0"
chrono = "0.4"
diesel = { version = "2.0.0", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
egs-api = "0.6"
env_logger = "0.9"
fs2 = "0.4.3"
gtk4 = { version = "0.5", features = ["v4_8"] }
gtk-macros = "0.3"
html2pango = "0.5"
lazy_static = "1.4"
libsqlite3-sys = { version = "0.22.2", features = ["bundled"] }
log = "0.4"
once_cell = "1.8"
opener = "0.5"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha-1 = "0.10"
threadpool = "1.8"
tokio = "1"
version-compare = "0.1"
zip = "0.6"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
open = "3"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.3"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
ghregistry = "^0.2"
git2 = "0.15"
secret-service = "2.0"
