[package]
name = "epic_asset_manager"
version = "3.8.6"
authors = ["Milan Stastny <milan@stastnej.ch>"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/AchetaGames/Epic-Asset-Manager"
description = "An unofficial client to install Unreal Engine, download and manage purchased assets, projects, plugins and games from the Epic Games Store"
keywords = ["unreal", "engine", "gamedev", "assets", "epic"]
categories = ["gui"]

[dependencies]
adw = { package = "libadwaita", version = "0.8", features = ["v1_7"] }
anyhow = "1.0"
async-channel = "2"
byte-unit = "5.1"
chrono = "0.4"
diesel = { version = "2", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2", features = ["sqlite"] }
egs-api = "0.10.2"
env_logger = "0.11"
fs2 = "0.4.3"
gtk4 = { version = "0.10", features = ["v4_18"] }
gtk-macros = "0.3"
html2pango = "0.6"
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
log = "0.4"
once_cell = "1.8"
opener = "0.7.2"
rand = "0.9"
regex = "1"
reqwest = { version = "0.13", features = ["json", "cookies", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha-1 = "0.10"
threadpool = "1.8"
tokio = "1"
version-compare = "0.2.0"
zip = "8"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
open = "5.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.12"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
ghregistry = "^0.2"
secret-service = { version = "5", features = ["crypto-rust"] }
zbus = { version = "5", features = ["tokio"] }
